examples/valid/sequence/IOSequence.wacc
# basic input/output sequence
# Output:
# Please input an integer: #user input#
# You input: #repeat user input#

#Program:#

begin 
  int x = 0 ;
  print "Please input an integer: " ;
  read x ;
  print "You input: " ;
  println x
end
