examples/invalid/semanticErr/function/functionRedefine.wacc
# attempted redefinition of function
# Output:
# #semantic error#

#Program:#

begin
	int f() is
		return 0 
	end 
  int f() is
    return 1
  end
  int x = call f();
  println x
end
	
